1. Collection API Улучшения [#261308]